# CLI

./: .dockerignore  .env  .gitignore  .railwayignore  Cargo.toml  Dockerfile  ICONS_GENERATOR_README.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  boneyard.config.json  config.toml  eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  preview_log.txt  start.sh  vite.config.js
Docomentations/: ADD_REPOSITORY_TUTORIAL.md  API_STUDY_GUIDE.md  BACKEND_JOURNEY.md  BACKEND_NODEJS_TUTORIAL.md  CODE_EXAMPLES.md  DOCUMENTATION_INDEX.md  FILESYSTEM.md  FILETREE_INTEGRATION.md  FULL_BACKEND_ARCHITECTURE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INDEX_FILES.md  NODEJS_GUIDE.md  PROJECT_CHECKLIST.md  PROJECT_COMPLETION_CHECKLIST.md  QUICK_REFERENCE.md  REPOSITORY_MANAGEMENT_GUIDE.md  ROUTES_AND_DATA_DOCUMENTATION.md  SETUP_GUIDE.md  STARS_FEATURE_DETAILED_FLOW.md  START_HERE.md  Services.md  VISUAL_DIAGRAMS.md
public/: manifest.json
public/customIcons/: AccessibilityIcon.jsx  Addfile.jsx  AppearanceIcon.jsx  ArrowRightIcon.jsx  ChevronDownIcon.jsx  CloseIcon.jsx  CopilotIcon.jsx  CopyToClipboardIcon.jsx  DragIcon.jsx  EnterpriseIcon.jsx  EnterprisesIcon.jsx  FeatureIcon.jsx  FilterIcon.jsx  GistsIcon.jsx  GithubLogoIcon.jsx  HamburgerIcon.jsx  OrganizationsIcon.jsx  PeopleIcon.jsx  ProfileIcon.jsx  RepositoriesIcon.jsx  ReposotoryIcon.jsx  SearchIconSvg.jsx  SettingsIcon.jsx  SignOutIcon.jsx  SponsorsIcon.jsx  StarsIcon.jsx  SwitchIcon.jsx  XIcon.jsx
src/: App.jsx  cli.rs  config.rs  index.css  main.jsx  main.rs  server.rs
(+158 files in other folders)
