[package]
name = "github-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.12"
prettytable-rs = "0.10.0"
serde_json = "1.0"
walkdir = "2.5.0"
chrono = "0.4.38"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
futures-util = "0.3"
